--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Mr. Rooter Plumbing - Expert plumbing contractors you can trust. 24/7 emergency plumbing services for residential and commercial customers.">
-  <title>Mr. Rooter Plumbing | Expert Plumbing Contractors You Can Trust</title>
+  <title>happydanplumbers | Expert Plumbing Contractors You Can Trust</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
@@ -36,9 +36,9 @@
         <div class="navbar-content">
           <!-- Logo -->
           <a href="/" class="logo">
-            <div class="logo-icon">MR</div>
+            <div class="logo-icon">HD</div>
             <div class="logo-text">
-              <span class="logo-name">Mr. Rooter</span>
+              <span class="logo-name">Happy Dan </span>
               <span class="logo-tagline">Plumbing</span>
             </div>
           </a>
@@ -58,9 +58,9 @@
               Book Online
             </button>
             <div class="phone-cta">
-              <a href="tel:8559822028" class="phone-number">
+              <a href="tel:+254706379094" class="phone-number">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-                (855) 982-2028
+                +254 706 379 094
               </a>
               <span class="phone-subtext">24/7 Scheduling</span>
             </div>
@@ -80,9 +80,9 @@
           <a href="#about" class="mobile-nav-link">About Us</a>
           <a href="#resources" class="mobile-nav-link">Resources</a>
           <div class="mobile-nav-cta">
-            <a href="tel:8559822028" class="btn btn-primary btn-full">
+            <a href="tel:+254706379094" class="btn btn-primary btn-full">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-              Call (855) 982-2028
+              Call (+254) 706 379 094
             </a>
             <button class="btn btn-navy btn-full">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="18" height="18" x="3" y="4" rx="2" ry="2"/><line x1="16" x2="16" y1="2" y2="6"/><line x1="8" x2="8" y1="2" y2="6"/><line x1="3" x2="21" y1="10" y2="10"/></svg>
@@ -469,7 +469,7 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-bottom-content">
-          <p>© 2024 Mr. Rooter Plumbing. All rights reserved.</p>
+          <p>© 2026 Happy Dan Plumbing. All rights reserved.</p>
           <div class="footer-bottom-links">
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
