--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <a href="#why-us" class="nav-link">Why Us</a>
             <a href="#about" class="nav-link">About Us</a>
             <div class="nav-item dropdown">
-              <a href="#resources" class="nav-link">Resources</a>
+              <a href="#" class="nav-link">Resources</a>
               <div class="dropdown-menu">
-                <a href="#faqs" class="dropdown-link">FAQs</a>
-                <a href="#blog" class="dropdown-link">Blog</a>
+                <a href="faqs.html" class="dropdown-link">FAQs</a>
+                <a href="blog.html" class="dropdown-link">Blog</a>
               </div>
             </div>
           </div>
@@ -112,7 +112,8 @@
           <a href="#emergency" class="mobile-nav-link nav-link-primary">Emergency Plumbing</a>
           <a href="#why-us" class="mobile-nav-link">Why Us</a>
           <a href="#about" class="mobile-nav-link">About Us</a>
-          <a href="#resources" class="mobile-nav-link">Resources</a>
+          <a href="faqs.html" class="mobile-nav-link">FAQs</a>
+          <a href="blog.html" class="mobile-nav-link">Blog</a>
           <div class="mobile-nav-cta">
             <a href="tel:+254706379094" class="btn btn-primary btn-full">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
