--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
                 <article class="blog-card">
                     <div class="blog-image">
                         <img src="https://images.unsplash.com/photo-1542013936693-884638332954?w=800&q=80"
-                            alt="Plumbing tools">
+                            alt="Professional plumbing tools being used in Nairobi">
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">January 20, 2026</div>
@@ -123,7 +123,7 @@
                 <article class="blog-card">
                     <div class="blog-image">
                         <img src="https://images.unsplash.com/photo-1600607686527-6fb886090705?w=800&q=80"
-                            alt="Modern bathroom">
+                            alt="Modern bathroom renovation example in Kenya">
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">January 15, 2026</div>
@@ -138,7 +138,7 @@
                 <article class="blog-card">
                     <div class="blog-image">
                         <img src="https://images.unsplash.com/photo-1556911220-e15b29be8c8f?w=800&q=80"
-                            alt="Kitchen sink">
+                            alt="Kitchen sink maintenance in Kisumu">
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">January 10, 2026</div>
