--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="HappyDan Plumbing - Expert plumbing contractors you can trust. 24/7 emergency plumbing services for residential and commercial customers.">
-  <title>happydanplumbers | Expert Plumbing Contractors You Can Trust</title>
+    content="24/7 emergency plumber in Nairobi, Nakuru & Kisumu. Biodigester installation, solar water heaters, drain cleaning & bathroom remodeling. Call +254 706 379 094 now!">
+  <meta name="keywords"
+    content="Plumber Nairobi, Emergency plumber Nairobi, Plumber Nakuru, Plumber Kisumu, Plumbing services Nairobi, Biodigester installation Kenya, Solar water heater installation Nairobi, Shower cubicle installation Nairobi, Drain cleaning Nairobi, Water heater repair Nairobi, 24 hour plumber Nairobi, Blocked drain Nairobi, Sewer repair Kenya, Bathroom remodeling Nairobi, Office renovations Nairobi, Tiling services Nairobi, Gypsum ceiling installation Kenya">
+  <meta name="robots" content="index, follow">
+  <title>Happy Dan Plumbers Nairobi | Emergency Plumber, Biodigester & Solar Water Heater Installation Kenya</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -122,10 +125,10 @@
         <!-- Left Content -->
         <div class="hero-content">
           <p class="hero-subtitle">Happy Dan Plumbing: Expert Plumbing Contractors You Can Trust</p>
-          <h1 class="hero-title">Quality Work by Local Plumbing Professionals</h1>
-          <p class="hero-description">Are you looking for a plumbing contractor you can trust for residential and
-            commercial plumbing services? You're in the right place. We are your locally owned and operated plumbing
-            company.</p>
+          <h1 class="hero-title">Trusted Emergency Plumber in Nairobi, Nakuru & Kisumu | Happy Dan Plumbers</h1>
+          <p class="hero-description">Looking for a trusted plumber in Nairobi, Nakuru, or Kisumu? Happy Dan Plumbers
+            offers 24/7 emergency services, biodigester installation, solar water heaters, and bathroom remodeling
+            across Kenya.</p>
 
           <!-- Stats -->
           <div class="hero-stats">
@@ -225,8 +228,8 @@
                   <input type="tel" id="phone" placeholder="(555) 555-5555" required>
                 </div>
                 <div class="form-group">
-                  <label for="zip">ZIP Code*</label>
-                  <input type="text" id="zip" placeholder="55555" required>
+                  <label for="zip">Location / Area (e.g., Westlands, Nairobi)*</label>
+                  <input type="text" id="zip" placeholder="Westlands, Nairobi" required>
                 </div>
               </div>
               <div class="form-checkbox">
@@ -247,8 +250,9 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Our <span class="text-primary">Services</span></h2>
-        <p class="section-description">From routine maintenance to emergency repairs, our certified plumbers are ready
-          to help with all your plumbing needs. We also offer expert interior design services.</p>
+        <p class="section-description">We serve Nairobi, Nakuru, Kisumu and surrounding areas with expert biodigester
+          installation, solar water heater services, and more. From routine maintenance to emergency repairs, our
+          certified plumbers are ready to help.</p>
       </div>
 
       <!-- Service Tabs -->
