--- a/index.html
+++ b/index.html
@@ -47,31 +47,7 @@
             </div>
           </div>
         </div>
-        <!-- CTA Section
-        <div class="nav-cta">
-          <button class="btn btn-navy">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
-              <line x1="16" x2="16" y1="2" y2="6" />
-              <line x1="8" x2="8" y1="2" y2="6" />
-              <line x1="3" x2="21" y1="10" y2="10" />
-            </svg>
-            Book Online
-          </button>
-          <div class="phone-cta">
-            <a href="tel:+254706379094" class="phone-number">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path
-                  d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-              </svg>
-              +254 706 379 094
-            </a>
-            <span class="phone-subtext">24/7 Scheduling</span>
-          </div>
-        </div> -->
-        <!-- Mobile Menu Button -->
+
         <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle menu">
           <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -487,7 +463,7 @@
   <section id="why-us" class="why-us">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title light">Why Choose <span class="text-primary">happy.Dan.plumbers</span></h2>
+        <h2 class="section-title light">Why Choose <span class="text-primary">happyDanplumbers</span></h2>
         <p class="section-description light">Serving Nairobi, Nakuru, Kisumu since 1970, Happy Dan Plumbers has been the
           trusted name in plumbing. Here's why homeowners and businesses choose us.</p>
       </div>
@@ -640,8 +616,9 @@
         <h2 class="section-title">What Our <span class="text-primary">Customers Say</span></h2>
         <p class="section-description">Don't just take our word for it. Here's what real customers have to say about
           their experience with Happy Dan</p>
+        <button class="btn btn-primary" id="openReviewBtn" style="margin-top: 1rem;">Submit a Review</button>
       </div>
-      <div class="testimonials-grid">
+      <div class="testimonials-grid" id="testimonialsGrid">
         <div class="testimonial-card">
           <div class="quote-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
@@ -911,6 +888,116 @@
       </div>
     </div>
   </footer>
+  <!-- Modals -->
+  <div id="appointmentModal" class="modal-overlay">
+    <div class="modal-content">
+      <button class="modal-close" id="closeAppointmentBtn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </button>
+      <h3 class="form-title">Book an Appointment</h3>
+      <form id="appointmentForm">
+        <div class="form-row">
+          <div class="form-group">
+            <label for="appFirstName">First Name*</label>
+            <input type="text" id="appFirstName" required>
+          </div>
+          <div class="form-group">
+            <label for="appLastName">Last Name*</label>
+            <input type="text" id="appLastName" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="appEmail">Email*</label>
+          <input type="email" id="appEmail" required>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label for="appPhone">Phone*</label>
+            <input type="tel" id="appPhone" required>
+          </div>
+          <div class="form-group">
+            <label for="appLocation">Location*</label>
+            <input type="text" id="appLocation" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="appService">Service*</label>
+          <select id="appService" required
+            style="width:100%; padding:0.75rem; border:1px solid var(--border); border-radius:var(--radius);">
+            <option value="">Select a service</option>
+            <option value="Drain Cleaning">Drain Cleaning</option>
+            <option value="Plumbing Repairs">Plumbing Repairs</option>
+            <option value="Sewer Services">Sewer Services</option>
+            <option value="Bathroom Remodeling">Bathroom Remodeling</option>
+            <option value="Water Heater Services">Water Heater Services</option>
+            <option value="Emergency Plumbing">Emergency Plumbing</option>
+            <option value="Biodigester Installation">Biodigester Installation</option>
+            <option value="Shower Cubicle Installation">Shower Cubicle Installation</option>
+            <option value="Solar Water Heater">Solar Water Heater</option>
+          </select>
+        </div>
+        <div class="form-row">
+          <div class="form-group">
+            <label for="appDate">Preferred Date*</label>
+            <input type="date" id="appDate" required>
+          </div>
+          <div class="form-group">
+            <label for="appTime">Preferred Time*</label>
+            <input type="time" id="appTime" required>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary btn-full">Submit Booking</button>
+      </form>
+    </div>
+  </div>
+
+  <div id="reviewModal" class="modal-overlay">
+    <div class="modal-content">
+      <button class="modal-close" id="closeReviewBtn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </button>
+      <h3 class="form-title">Submit a Review</h3>
+      <form id="reviewForm">
+        <div class="form-group">
+          <label for="revName">Name*</label>
+          <input type="text" id="revName" required>
+        </div>
+        <div class="form-group">
+          <label for="revLocation">Location*</label>
+          <input type="text" id="revLocation" required>
+        </div>
+        <div class="form-group">
+          <label for="revRating">Rating (1-5)*</label>
+          <select id="revRating" required
+            style="width:100%; padding:0.75rem; border:1px solid var(--border); border-radius:var(--radius);">
+            <option value="5">5 Stars</option>
+            <option value="4">4 Stars</option>
+            <option value="3">3 Stars</option>
+            <option value="2">2 Stars</option>
+            <option value="1">1 Star</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="revComment">Comment*</label>
+          <textarea id="revComment" required
+            style="width:100%; padding:0.75rem; border:1px solid var(--border); border-radius:var(--radius); min-height:100px;"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary btn-full">Submit Review</button>
+      </form>
+    </div>
+  </div>
+
+  <div id="toastContainer" class="toast"></div>
+
+  <script src="api.js"></script>
   <script src="script.js"></script>
   <script type="application/ld+json">
     {
