aded kitchen renovation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="24/7 emergency plumber in Nairobi, Nakuru & Kisumu. Biodigester installation, solar water heaters, drain cleaning & bathroom remodeling. Call +254 706 379 094 now!">
   <meta name="keywords"
-    content="Plumber Nairobi, Emergency plumber Nairobi, Plumber Nakuru, Plumber Kisumu, Plumbing services Nairobi, Biodigester installation Kenya, Solar water heater installation Nairobi, Shower cubicle installation Nairobi, Drain cleaning Nairobi, Water heater repair Nairobi, 24 hour plumber Nairobi, Blocked drain Nairobi, Sewer repair Kenya, Bathroom remodeling Nairobi, Office renovations Nairobi, Tiling services Nairobi, Gypsum ceiling installation Kenya">
+    content="Plumber Nairobi, Emergency plumber Nairobi, Plumber Nakuru, Plumber Kisumu, Plumbing services Nairobi, Biodigester installation Kenya, Solar water heater installation Nairobi, Shower cubicle installation Nairobi, Drain cleaning Nairobi, Water heater repair Nairobi, 24 hour plumber Nairobi, Blocked drain Nairobi, Sewer repair Kenya, Bathroom remodeling Nairobi, Office renovations Nairobi, Kitchen renovation Nairobi, Tiling services Nairobi, Gypsum ceiling installation Kenya">
   <meta name="robots" content="index, follow">
   <link rel="icon" href="logo.png" type="image/png">
   <title>Happy Dan Plumbers Nairobi | Emergency Plumber, Biodigester & Solar Water Heater Installation Kenya</title>
@@ -104,7 +104,8 @@
           <p class="hero-subtitle">Happy Dan Plumbing: Expert Plumbing Contractors You Can Trust</p>
           <h1 class="hero-title">Trusted Emergency Plumber in Nairobi, Nakuru & Kisumu | Happy Dan Plumbers</h1>
           <p class="hero-description">Looking for a trusted plumber in Nairobi, Nakuru, or Kisumu? Happy Dan Plumbers
-            offers 24/7 emergency services, biodigester installation, solar water heaters, and bathroom remodeling
+            offers 24/7 emergency services, biodigester installation, solar water heaters, bathroom remodeling, and
+            kitchen renovation
             across Kenya.</p>
 
           <!-- Stats -->
@@ -116,7 +117,7 @@
                 <div class="stat-icon">💬</div>
               </div>
               <div class="stat-text">
-                <span class="stat-number">252,730</span>
+                <span class="stat-number">10,000</span>
                 <span class="stat-label">Customer Reviews</span>
               </div>
             </div>
@@ -383,6 +384,20 @@
       <!-- Interior Design Content -->
       <div id="interior" class="tab-content">
         <div class="services-grid">
+          <div class="service-card">
+            <div class="service-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2" />
+                <path d="M7 2v20" />
+                <path d="M21 15V2v0a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7" />
+              </svg>
+            </div>
+            <h3 class="service-title">Kitchen Renovation</h3>
+            <p class="service-description">Modernize your culinary space with professional kitchen remodeling and design
+              in Nairobi.</p>
+            <a href="#" class="service-link">Learn More →</a>
+          </div>
           <div class="service-card">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
@@ -938,6 +953,7 @@
             <option value="Biodigester Installation">Biodigester Installation</option>
             <option value="Shower Cubicle Installation">Shower Cubicle Installation</option>
             <option value="Solar Water Heater">Solar Water Heater</option>
+            <option value="Kitchen Renovation">Kitchen Renovation</option>
           </select>
         </div>
         <div class="form-row">
