aded kitchen renovation

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
   <section id="why-us" class="why-us">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title light">Why Choose <span class="text-primary">happyDanplumbers</span></h2>
+        <h2 class="section-title light">Why Choose <span class="text-primary">Happy Dan Plumbers</span></h2>
         <p class="section-description light">Serving Nairobi, Nakuru, Kisumu since 2016, Happy Dan Plumbers has been the
           trusted name in plumbing. Here's why homeowners and businesses choose us.</p>
       </div>
