added beautiful popups to our services section

--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
       <!-- Plumbing Services Content -->
       <div id="plumbing" class="tab-content active">
         <div class="services-grid">
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/drain cleaning.jpeg"
+            data-service-info="Using high-pressure hydro-jetting and professional tools, we clear even the most stubborn clogs from your drains and sewer lines. Our service is fast, effective, and prevents future blockages.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -254,7 +255,8 @@
             <p class="service-description">Professional drain cleaning services in Nairobi to prevent clogs fast.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/toilet sink.jpeg"
+            data-service-info="From leaky faucets to burst pipes, our expert plumbers handle all types of repairs with precision. We use high-quality materials to ensure long-lasting solutions for your home.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -268,20 +270,22 @@
             </p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/sewer cleaning.png"
+            data-service-info="We offer comprehensive sewer line inspections, repairs, and full replacements. Our trenchless technology minimizes disruption to your property while restoring your sewer system.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M2 22h20" />
                 <path
-                  d="M6.36 17.4 4 17l-2-4 1.1-.55a2 2 0 0 1 1.8 0l.17.1a2 2 0 0 0 1.8 0L8 12 5 6l.9-.45a2 2 0 0 1 1.8 0l.17.1a2 2 0 0 0 1.8 0L11 5l-1-4 1.1-.55a2 2 0 0 1 1.8 0l.17.1a2 2 0 0 0 1.8 0L16 0l1 4-1.1.55a2 2 0 0 1-1.8 0l-.17-.1a2 2 0 0 0-1.8 0L11 5l3 6-1.1.55a2 2 0 0 1-1.8 0l-.17-.1a2 2 0 0 0-1.8 0L8 12l2 4-1.1.55a2 2 0 0 1-1.8 0l-.17-.1a2 2 0 0 0-.57-.1z" />
+                  d="M6.36 17.4 4 17l-2-4 1.1-.55a2 2 0 0 1 1.8 0l.17.1a2 2 0 0 1 1.8 0L8 12 5 6l.9-.45a2 2 0 0 1 1.8 0l.17.1a2 2 0 0 0 1.8 0L11 5l-1-4 1.1-.55a2 2 0 0 1 1.8 0l.17.1a2 2 0 0 0 1.8 0L16 0l1 4-1.1.55a2 2 0 0 1-1.8 0l-.17-.1a2 2 0 0 0-1.8 0L11 5l3 6-1.1.55a2 2 0 0 1-1.8 0l-.17-.1a2 2 0 0 0-1.8 0L8 12l2 4-1.1.55a2 2 0 0 1-1.8 0l-.17-.1a2 2 0 0 0-.57-.1z" />
               </svg>
             </div>
             <h3 class="service-title">Sewer Services</h3>
             <p class="service-description">Complete sewer line repair, replacement, and maintenance services.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/bath tab .jpeg"
+            data-service-info="Upgrade your bathroom with modern fixtures, elegant tiling, and efficient plumbing. We handle everything from shower installations to full layout redesigns.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -303,7 +307,8 @@
             </p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/imersion water heate.jpeg"
+            data-service-info="Expert installation and repair of electric and gas water heaters. We ensure your system is energy-efficient and provides consistent hot water for your household needs.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -315,7 +320,8 @@
             <p class="service-description">Installation, repair, and maintenance for all types of water heaters.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/modern toilet.jpeg"
+            data-service-info="24/7 rapid response for all plumbing emergencies. Whether it's a burst pipe, severe leak, or sewage backup, our team is ready to restore your plumbing fast.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -329,7 +335,8 @@
             <a href="#" class="service-link">Learn More →</a>
           </div>
           <!-- New Plumbing Services -->
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/biodigester.jpeg"
+            data-service-info="Modern, eco-friendly waste management solutions. Our biodigester systems are space-saving, odor-free, and require minimal maintenance while protecting the environment.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -344,7 +351,8 @@
               Kenya.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/Glass shower cubicle.jpeg"
+            data-service-info="Sleek and durable glass shower enclosures that enhance the look and value of your bathroom. We offer custom sizes and professional, leak-proof installation.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -359,7 +367,8 @@
             <p class="service-description">Modern and stylish shower enclosure installations in Nairobi.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/SUS316 Stainless Steel Solar Water Heater.jpeg"
+            data-service-info="Reduce your energy bills with high-efficiency solar water heating systems. Our SUS316 stainless steel tanks are corrosion-resistant and built for the Kenyan climate.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -384,7 +393,8 @@
       <!-- Interior Design Content -->
       <div id="interior" class="tab-content">
         <div class="services-grid">
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/kitchen renovation.jpeg"
+            data-service-info="Create your dream kitchen with our expert design and renovation services. We handle everything from custom cabinetry and countertops to professional plumbing and lighting.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -398,7 +408,8 @@
               in Nairobi.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/office renovation.jpeg"
+            data-service-info="Boost productivity with a modern, functional office space. We provide full renovation services including space planning, lighting design, and ergonomic workstations.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -411,7 +422,8 @@
             <p class="service-description">Complete office makeovers for a productive work environment in Nairobi.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/tiling.jpeg"
+            data-service-info="Professional floor and wall tiling for a stunning finish. We work with ceramic, porcelain, and natural stone to create beautiful, durable surfaces in any room.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -426,7 +438,8 @@
             <p class="service-description">Expert floor and wall tiling for bathrooms, kitchens, and more in Kenya.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/lighing and gypsum.jpeg"
+            data-service-info="Enhance your space with modern lighting solutions. From ambient lighting to task-specific fixtures, we design and install systems that are both functional and beautiful.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -443,7 +456,8 @@
             <p class="service-description">Modern lighting solutions to brighten up your space in Nairobi.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/kitchen cabinetry.jpeg"
+            data-service-info="Custom cabinetry tailored to your needs. We build high-quality, stylish storage solutions for kitchens, bathrooms, and bedrooms using premium materials.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -456,7 +470,8 @@
             <p class="service-description">Custom cabinetry for kitchens, bathrooms, and storage needs in Kenya.</p>
             <a href="#" class="service-link">Learn More →</a>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-image="assets/Gypsum false ceiling design.jpeg"
+            data-service-info="Elegant gypsum ceilings and partitions for a sophisticated look. We create custom designs with integrated lighting to transform any room into a modern masterpiece.">
             <div class="service-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -1008,6 +1023,24 @@
         </div>
         <button type="submit" class="btn btn-primary btn-full">Submit Review</button>
       </form>
+    </div>
+  </div>
+
+  <div id="serviceDetailModal" class="modal-overlay">
+    <div class="modal-content service-modal-content">
+      <button class="close-modal" id="closeServiceModal" aria-label="Close modal">&times;</button>
+      <div class="service-modal-grid">
+        <div class="service-modal-image">
+          <img id="modalServiceImage" src="" alt="">
+        </div>
+        <div class="service-modal-info">
+          <h2 id="modalServiceTitle"></h2>
+          <p id="modalServiceDescription"></p>
+          <div class="modal-cta">
+            <button class="btn btn-primary btn-full" id="modalBookBtn">Book This Service</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
